Change main colors / correct pictures size and gap for MID-SECTION

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 body {
     font-family: "Roboto", Helvetica, sans-serif;
     margin: 0;
-    background: url(/pictures/back1.jpg);
 }
 
 /* HEADER */
@@ -12,10 +11,21 @@ body {
     justify-content: space-between;
     align-items: center;
     color: white;
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(93, 69, 43, 0.75);
     padding: 0px 50px;
     box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(15px);
+}
+
+.header-group {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 25px;
+}
+
+.logo {
+    height: 50px;
 }
 
 ul {
@@ -90,7 +100,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 50px;
+    gap: 75px;
     flex-wrap: wrap;
 }
 
@@ -111,14 +121,14 @@ a {
 }
 
 .mid-picture {
-    height: 200px;
+    height: 300px;
     border-radius: 10px;
     box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
 }
 
 /* QUOTE */
 .quote {
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: lightgrey;
     display: flex;
     flex-direction: column;
     margin: 50px 0px;
@@ -136,7 +146,7 @@ a {
 
 /* BOTTON */
 .bottom {
-    background-color: #3882f6;
+    background-color: rgba(148, 120, 83);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -182,6 +192,6 @@ a {
 .footer {
     text-align: center;
     color: white;
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(93, 69, 43, 0.75);
     padding: 10px 0px;
 }
